[gd_scene load_steps=4 format=3 uid="uid://c2xl7q7iaufej"]

[ext_resource type="Texture2D" uid="uid://itqy0v14a1e3" path="res://Assets/Mechanics/Shadow.png" id="1_mhnga"]
[ext_resource type="BitMap" uid="uid://bnjadejv7cnkl" path="res://Assets/Mechanics/ShadowBitmap.png" id="2_borpn"]
[ext_resource type="Script" path="res://Scripts/Mechanics/Joystick.gd" id="3_7icpm"]

[node name="Joystick" type="CanvasLayer"]

[node name="RightLayout" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JoystickButton" type="TouchScreenButton" parent="RightLayout"]
modulate = Color(1, 1, 1, 0.270588)
position = Vector2(-196, -196)
scale = Vector2(8, 8)
texture_normal = ExtResource("1_mhnga")
bitmask = ExtResource("2_borpn")
visibility_mode = 1
script = ExtResource("3_7icpm")

[node name="InputButton" type="TouchScreenButton" parent="RightLayout/JoystickButton"]
position = Vector2(6, 6)
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("1_mhnga")
visibility_mode = 1

[connection signal="pressed" from="RightLayout/JoystickButton" to="RightLayout/JoystickButton" method="_on_pressed"]
[connection signal="released" from="RightLayout/JoystickButton" to="RightLayout/JoystickButton" method="_on_released"]
[connection signal="tree_exiting" from="RightLayout/JoystickButton" to="RightLayout/JoystickButton" method="_on_tree_exiting"]
